Academia.SIMOVIA.WebAPI/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simoviaapi-sare-deployment
  namespace: academia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simoviaapi-sare
  template:
    metadata:
      labels:
        app: simoviaapi-sare
    spec:
      containers:
      - image: harbor-01.docker-registry.grupofarsiman.io/academia/simoviaapi-sare:v1
        name: webapi
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
        ports:
          - containerPort: 80
