Academia.SIMOVIA.WebAPI/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simoviaapi-sare
  namespace: academia
spec:
  containers:
  - name: webapi
    image: harbor-01.docker-registry.grupofarsiman.io/academia/simoviaapi-sare:v1
    ports:
    - containerPort: 8080
