Academia.SIMOVIA.WebAPI/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simoviaapi-sare-service
  namespace: academia
spec:
  type: ClusterIP
  selector:
    app: simoviaapi-sare
  ports:
    - name: http
      port: 80
      targetPort: 80
